// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReactGcOrgchart Default options 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          ReactGcOrgchart
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Default options
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    />
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ReactGcOrgchart
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  orgStructure
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      {
                    </button>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                    >
                      ...
                    </button>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        uuid
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        name
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        orgTier
                        ?
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        subordinates
                        ?
                        :
                         
                      </span>
                      <span>
                        <span>
                          [
                        </span>
                        <span>
                          <span>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              {
                            </button>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                            >
                              ...
                            </button>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                uuid
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                name
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                orgTier
                                ?
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                subordinates
                                ?
                                :
                                 
                              </span>
                              <span>
                                <span>
                                  [
                                </span>
                                <span>
                                  <span>
                                    custom
                                  </span>
                                </span>
                                <span>
                                  ]
                                </span>
                              </span>
                              ,
                            </div>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              }
                            </button>
                          </span>
                        </span>
                        <span>
                          ]
                        </span>
                      </span>
                      ,
                    </div>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      }
                    </button>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  The organizational structure to display
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  subject
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    undefined
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Identifies by \`uuid\` which node is in focus
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onClick
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onKeyPress
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ReactGcOrgchart With HCI team structure 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          ReactGcOrgchart
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With HCI team structure
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "0px",
          }
        }
      >
        <div
          className="orgchart l2r"
        >
          <table>
            <tbody>
              <tr>
                <td
                  colSpan={20}
                >
                  <div
                    className="node "
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    style={Object {}}
                    tabIndex={1}
                  >
                    <div
                      className="title"
                    >
                      Jean-Francois Lapointe
                    </div>
                    <div
                      className="content"
                    >
                      HCI
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="lines"
              >
                <td
                  colSpan={20}
                >
                  <div
                    className="downLine"
                  />
                </td>
              </tr>
              <tr
                className="lines"
              >
                <td
                  className="rightLine "
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine "
                />
              </tr>
              <tr
                className="nodes"
              >
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={2}
                          >
                            <div
                              className="title"
                            >
                              Luc Belliveau
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={3}
                          >
                            <div
                              className="title"
                            >
                              Stephen Downes
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={4}
                          >
                            <div
                              className="title"
                            >
                              Helene Fournier
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={5}
                          >
                            <div
                              className="title"
                            >
                              Bruno Emond
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={6}
                          >
                            <div
                              className="title"
                            >
                              Norm Vinson
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={7}
                          >
                            <div
                              className="title"
                            >
                              Rodrigue Savoie
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={8}
                          >
                            <div
                              className="title"
                            >
                              Scott Buchanan
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={9}
                          >
                            <div
                              className="title"
                            >
                              Serge Leger
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={10}
                          >
                            <div
                              className="title"
                            >
                              Irina Kondratova
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={11}
                          >
                            <div
                              className="title"
                            >
                              Heather Molyneaux
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ReactGcOrgchart
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  orgStructure
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      {
                    </button>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                    >
                      ...
                    </button>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        uuid
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        name
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        orgTier
                        ?
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        subordinates
                        ?
                        :
                         
                      </span>
                      <span>
                        <span>
                          [
                        </span>
                        <span>
                          <span>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              {
                            </button>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                            >
                              ...
                            </button>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                uuid
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                name
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                orgTier
                                ?
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                subordinates
                                ?
                                :
                                 
                              </span>
                              <span>
                                <span>
                                  [
                                </span>
                                <span>
                                  <span>
                                    custom
                                  </span>
                                </span>
                                <span>
                                  ]
                                </span>
                              </span>
                              ,
                            </div>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              }
                            </button>
                          </span>
                        </span>
                        <span>
                          ]
                        </span>
                      </span>
                      ,
                    </div>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      }
                    </button>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  The organizational structure to display
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  subject
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    undefined
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Identifies by \`uuid\` which node is in focus
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onClick
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onKeyPress
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ReactGcOrgchart With HCI team structure and subject=1 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          ReactGcOrgchart
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With HCI team structure and subject=1
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "0px",
          }
        }
      >
        <div
          className="orgchart l2r"
        >
          <table>
            <tbody>
              <tr>
                <td
                  colSpan={20}
                >
                  <div
                    className="node "
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    style={Object {}}
                    tabIndex={1}
                  >
                    <div
                      className="title"
                    >
                      Jean-Francois Lapointe
                    </div>
                    <div
                      className="content"
                    >
                      HCI
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="lines"
              >
                <td
                  colSpan={20}
                >
                  <div
                    className="downLine"
                  />
                </td>
              </tr>
              <tr
                className="lines"
              >
                <td
                  className="rightLine "
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine topLine"
                />
                <td
                  className="rightLine topLine"
                />
                <td
                  className="leftLine "
                />
              </tr>
              <tr
                className="nodes"
              >
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node focused"
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={2}
                          >
                            <div
                              className="title"
                            >
                              Luc Belliveau
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={3}
                          >
                            <div
                              className="title"
                            >
                              Stephen Downes
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={4}
                          >
                            <div
                              className="title"
                            >
                              Helene Fournier
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={5}
                          >
                            <div
                              className="title"
                            >
                              Bruno Emond
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={6}
                          >
                            <div
                              className="title"
                            >
                              Norm Vinson
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={7}
                          >
                            <div
                              className="title"
                            >
                              Rodrigue Savoie
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={8}
                          >
                            <div
                              className="title"
                            >
                              Scott Buchanan
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={9}
                          >
                            <div
                              className="title"
                            >
                              Serge Leger
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={10}
                          >
                            <div
                              className="title"
                            >
                              Irina Kondratova
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
                <td
                  colSpan="2"
                >
                  <table>
                    <tbody>
                      <tr>
                        <td
                          colSpan={2}
                        >
                          <div
                            className="node "
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="button"
                            style={Object {}}
                            tabIndex={11}
                          >
                            <div
                              className="title"
                            >
                              Heather Molyneaux
                            </div>
                            <div
                              className="content"
                            >
                              HCI
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ReactGcOrgchart
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  orgStructure
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      {
                    </button>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                    >
                      ...
                    </button>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        uuid
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        name
                        
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        orgTier
                        ?
                        :
                         
                      </span>
                      <span>
                        string
                      </span>
                      ,
                    </div>
                    <div
                      style={
                        Object {
                          "marginLeft": 15,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "whiteSpace": "nowrap",
                          }
                        }
                      >
                        subordinates
                        ?
                        :
                         
                      </span>
                      <span>
                        <span>
                          [
                        </span>
                        <span>
                          <span>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              {
                            </button>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                            >
                              ...
                            </button>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                uuid
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                name
                                
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                orgTier
                                ?
                                :
                                 
                              </span>
                              <span>
                                string
                              </span>
                              ,
                            </div>
                            <div
                              style={
                                Object {
                                  "marginLeft": 15,
                                }
                              }
                            >
                              <span
                                style={
                                  Object {
                                    "whiteSpace": "nowrap",
                                  }
                                }
                              >
                                subordinates
                                ?
                                :
                                 
                              </span>
                              <span>
                                <span>
                                  [
                                </span>
                                <span>
                                  <span>
                                    custom
                                  </span>
                                </span>
                                <span>
                                  ]
                                </span>
                              </span>
                              ,
                            </div>
                            <button
                              className="css-5gtpmt"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              }
                            </button>
                          </span>
                        </span>
                        <span>
                          ]
                        </span>
                      </span>
                      ,
                    </div>
                    <button
                      className="css-5gtpmt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      }
                    </button>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  The organizational structure to display
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  subject
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    undefined
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Identifies by \`uuid\` which node is in focus
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onClick
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  onKeyPress
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    () =&gt; {}
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Handler for click events
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
